[Wk1] media/media-source/media-webm-opus-partial.html is a consistent failure (Enable VP8/VP9/Vorbis/Opus in WebKitLegacy) https://bugs.webkit.org/show_bug.cgi?id=228005 rdar://80346720

Reviewed by Jer Noble.

Source/WebCore:

There are already tests running under Wk1 that will exercise this code (and will no longer fail)

* page/RuntimeEnabledFeatures.cpp:
(WebCore::RuntimeEnabledFeatures::setVorbisDecoderEnabled):
Carry settings to PlatformMediaSessionManager
(WebCore::RuntimeEnabledFeatures::setOpusDecoderEnabled):
Carry settings to PlatformMediaSessionManager
* page/RuntimeEnabledFeatures.h:

Source/WebKit:

* Shared/WebPreferencesDefaultValues.cpp:
* Shared/WebPreferencesDefaultValues.h: Don't make webm parser conditional on VP9
being enabled; it's used with other codecs too and is codec-agnostic to start with.

Source/WebKitLegacy/mac:

* WebView/WebPreferencesDefaultValues.h: Add relevant settings getter methods.
* WebView/WebPreferencesDefaultValues.mm:
(WebKit::defaultWebMParserEnabled):
(WebKit::defaultVP8DecoderEnabled):
(WebKit::defaultVP9DecoderEnabled):

Source/WTF:

* Scripts/Preferences/WebPreferencesExperimental.yaml: Enable VP8/VP9/Vorbis/Opus
codecs for WebKitLegacy, no reasons they weren't already enabled.


Canonical link: https://commits.webkit.org/239717@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@279974 268f45cc-cd09-0410-ab3c-d52691b4dbfc