Source/WebKit/Shared/WebPreferencesDefaultValues.h
@@ -107,9 +107,10 @@ bool defaultWebMFormatReaderEnabled();
 bool defaultVP8DecoderEnabled();
 bool defaultVP9DecoderEnabled();
 bool defaultVP9SWDecoderEnabledOnBattery();
+#endif
+
 #if ENABLE(MEDIA_SOURCE)
 bool defaultWebMParserEnabled();
-#endif
 #endif
 
 } // namespace WebKit
